data/redis/overlays/production/redis-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
    app.kubernetes.io/instance: redis

spec:
  serviceName: redis
  selector:
    matchLabels:
      app: redis
      tier: data
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: redis
        tier: data
        app.kubernetes.io/instance: redis
    spec:
      enableServiceLinks: false
      containers:
        - name: redis
          image: redis:7.2
          ports:
            - containerPort: 6379
              name: tcp
          resources:
            requests:
              cpu: 300m
              memory: 1Gi
            limits:
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 10
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
